--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,7 @@ img:active {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 70%;
 }
 
 .grid {
@@ -49,6 +50,7 @@ img:active {
 }
 
 .card {
+  min-height: 150px;
   margin: 1rem;
   flex-basis: 45%;
   padding: 1.5rem;
